# skill-weave

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
benchmark/: queries.json
notebooks/: skill_weave_demo.ipynb
skill_weave/: __init__.py  advanced.py  annotate.py  card.py  circuit_breaker.py  embedding.py  learner.py  router.py  spine.py  telemetry.py  verifier.py  weaver.py
tests/: test_card.py  test_circuit_breaker.py  test_embedding.py  test_learner.py  test_learner_v2.py  test_router.py  test_spine.py  test_telemetry.py  test_verifier.py
