[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skill-weave"
version = "0.1.0"
description = "Adaptive skill routing for multi-agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FeiMing Studio"},
]

[project.urls]
Homepage = "https://github.com/Hxh-yaoxing/skill-weave"
Repository = "https://github.com/Hxh-yaoxing/skill-weave"

[tool.pytest.ini_options]
testpaths = ["tests"]
