[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-weave"
version = "0.4.0"
description = "Adaptive skill routing for multi-agent systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "FeiMing Studio"},
]

[project.urls]
Homepage = "https://github.com/Hxh-yaoxing/skill-weave"
Repository = "https://github.com/Hxh-yaoxing/skill-weave"


[project.optional-dependencies]
dev = ["pytest>=7.0"]
test = ["pytest>=7.0"]
[tool.setuptools.packages.find]
include = ["skill_weave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
